# UAV-Autonomous-control

./: .coverage  .coveragerc  .gitignore  README.md  Test Results - .html  config.ini  controller.py  fly.py  flying_robot.py  main.py  plot.py  pyproject.toml  pytest.ini  quad_plot_drawing.py  quadrotor.py  simulate_flight.py  simulation_3d.py  trajectory.py  utils.py
.github/workflows/: ci.yml
.junie/: guidelines.md
app/: autonomous_uav.py
app/pages/: 0_planning.py
classic_control/: controller.py  main.py  quadrotor.py  trajectory.py  utils_plot.py
classic_control1/: controller.py  quadrotor.py  simulate_flight.py  trajectory.py
control/: controller.py  main.py  quadrotor.py  simulation_3d.py  trajectory.py  utils_plot.py
devops/: ci.yml
planning/: minimum_snap.py  notes.md  obstacle.py  plot.py  rrt.py  trajectory.py
tests/: conf_test.ini  conftest.py
tests/fixtures/: fixtures.py
tests/planning/: test_minimum_snap.py
tests/unit/planning/: test_minimum_snap.py  test_rrt.py
uav_ac/: config.ini  main.py  utils.py
uav_ac/control/: controller.py  quadrotor.py  response.py
uav_ac/planning/: minimum_snap.py  plot.py  rrt.py
uav_ac/quadrotor/: quad.py
